--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>{% block title %}Eleven Labs !{% endblock %}</title>
     {% block stylesheets %}
+        <link
+                rel="stylesheet"
+                href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+                integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+                crossorigin="anonymous"
+        />
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
 </head>
