--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,9 @@
     {% endblock %}
 </head>
 <body>
-{% block body %}{% endblock %}
+{% block body %}
+    <div id="root"></div>
+{% endblock %}
 {% block javascripts %}
     {{ encore_entry_link_tags('app') }}
     {{ encore_entry_script_tags('app') }}
